# cookiecutter-python

./: .gitignore  LICENSE  README.rst  cookiecutter.json
{{cookiecutter.repo_name}}/: .cookiecutter.json  .darglint  .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.rst  azure-pipelines.yml  noxfile.py  pyproject.toml
{{cookiecutter.repo_name}}/.azure-pipelines/: python-setup.yml
{{cookiecutter.repo_name}}/doc/src/: conf.py  index.rst
{{cookiecutter.repo_name}}/src/{{cookiecutter.package_name}}/: __init__.py  _common.py  cli.py
{{cookiecutter.repo_name}}/test/: conftest.py  test_cli.py
