[tool.poetry]
name = "{{ cookiecutter.repo_name }}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]
readme = "README.rst"
packages = [{include = "{{ cookiecutter.package_name }}", from = "src"}]

[tool.poetry.dependencies]
python = "^{{ cookiecutter.python_version }}"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pytest = "^7.2.2"

[tool.poetry.scripts]
{{cookiecutter.repo_name}} = "{{cookiecutter.package_name}}.cli:main"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_context = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
